js map widget, faq